<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/account">

        <ScrollView
            android:id="@+id/registerScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="Here’s\nyour first\nstep with \nus! "
                        android:textColor="@color/whiteTextColor" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        app:srcCompat="@drawable/ic_login_hero" />
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputFirstName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextFirstName"
                                style="@style/modifiedEditText"
                                android:hint="@string/first_name"
                                android:inputType="textPersonName"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLastName"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextLastName"
                                style="@style/modifiedEditText"
                                android:hint="@string/last_name"
                                android:inputType="textPersonName"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextEmail"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_email_hint"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            app:passwordToggleEnabled="true"
                            android:layout_marginTop="@dimen/dp15">

                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputConfirmPassword"
                            style="@style/parent"
                            app:passwordToggleEnabled="true"
                            android:layout_marginTop="@dimen/dp15">

                            <EditText
                                android:id="@+id/editTextConfirmPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_confirm_password_hint"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputMobile"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">

                            <EditText
                                android:id="@+id/editTextMobile"
                                style="@style/modifiedEditText"
                                android:hint="@string/mobile_number"
                                android:inputType="phone"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_margin="@dimen/dp5"
                             android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <CheckBox
                                android:id="@+id/termandcondition"
                                android:focusable="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:textSize="12sp"
                                android:text="@string/privacy_policy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <Button
                            android:id="@+id/btRegister"
                            style="@style/loginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/register" />

                        <TextView
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="onLoginClick"
                            android:text="@string/already_have_an_account"
                            android:textAlignment="center"
                            android:textColor="@color/account"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:weightSum="12">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/whiteTextColor" />

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/use_other_methods"
                        android:textAlignment="center"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/whiteTextColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_facebook" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:srcCompat="@drawable/ic_google_plus" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_side_bg" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/register"
            android:onClick="onLoginClick"
            app:srcCompat="@drawable/ic_back_img" />


    <include
        android:id="@+id/progressBar"
        layout="@layout/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.375"
        tools:visibility="visible" />
</RelativeLayout>